After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 700860 - Background chooser isn't closed when panel changes from Background
Background chooser isn't closed when panel changes from Background
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: background
3.8.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2013-05-22 20:47 UTC by Joshua Lock
Modified: 2013-06-04 11:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to prevent crash (1.88 KB, patch)
2013-05-22 20:47 UTC, Joshua Lock
none Details | Review
Updated patch based on feedback received in #700856 (2.20 KB, patch)
2013-05-24 02:01 UTC, Joshua Lock
none Details | Review
Cleaner patch based on suggestion from Thomas Wood (1.86 KB, patch)
2013-06-03 23:50 UTC, Joshua Lock
committed Details | Review

Description Joshua Lock 2013-05-22 20:47:09 UTC
If g-c-c has the background chooser open and the user triggers a switch to a different panel (i.e. from one of the gnome-shell indicators) the chooser is still the topmost window and modal for g-c-c, however if the chooser is interacted with in any way other than clicking the cancel button g-c-c crashes.
Comment 1 Joshua Lock 2013-05-22 20:47:41 UTC
Created attachment 245086 [details] [review]
Patch to prevent crash
Comment 2 Joshua Lock 2013-05-24 02:01:00 UTC
Created attachment 245209 [details] [review]
Updated patch based on feedback received in #700856
Comment 3 Joshua Lock 2013-06-03 23:50:12 UTC
Created attachment 245974 [details] [review]
Cleaner patch based on suggestion from Thomas Wood