background: ensure background chooser is closed if panel changed

If the background chooser is open and the user triggers a switch to a
different panel (i.e. from one of the gnome-shell indicators) the chooser
is still the topmost window and modal for g-c-c, however if the chooser is
interacted with in any way other than clicking the cancel button g-c-c
crashes.

Ensure that the chooser is destroyed if the panel is changed.

https://bugzilla.gnome.org/show_bug.cgi?id=700860